package Behavioral.Null.Interface;

public interface Vehicle {
    String getName();
    int seatingCapacity();
    int fuelTankCapacity();
}

